# CP-SAT-PROJECT

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  README.md  activities.yaml  app.py  assistant.py  bench_extract.py  doc_chat.py  extract.py  extract_det.py  extract_llm.py  extract_sched.py  grocery-store-library.json  ingest.py  models.py  parse.py  planner_schema.sql  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  scenario.yaml  scratch.py  smoke.py  solver.py  testdoc.docx  ~$estdoc.docx
.claude/: settings.json
data/scenarios/: README.md  example.yaml
data/source/: README.md  activities.yaml  fixed_events.yaml
examples/: errands.json  lake.json  lake_infeasible.json  manifest.json  morning.json  nasa_mission_3day.json  project.json  store.json  tight.json
scratch/: conflicts.py  play.py
src/cpsat_scheduler/: __init__.py  __main__.py  cli.py  compare.py  constraints.py  data_loader.py  models.py  paths.py  scenario.py  (+1 more)
static/: app.js  core.js  coverage.js  editor.js  gantt.js  library.json  main.js  style.css  upload.js
templates/: index.html
testdata/: artemis_3day_schedule.docx  make_sample_docx.py  sample_vehicle_requirements.docx
tests/: conftest.py  test_assistant.py  test_doc_chat.py  test_examples.py  test_explain_relax.py  test_extract_duplicates.py  test_extract_duration.py  test_extract_empty.py  test_extract_glossary.py  test_extract_llm.py  test_extract_sched.py  test_extract_spec.py  test_extract_spec_types.py  test_fill.py  test_ingest.py  test_models.py  test_routes.py  test_solver.py
(+9 files in other folders)
