[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpsat-scheduler"
version = "0.1.0"
description = "Scenario-based personal scheduling optimizer built on Google OR-Tools CP-SAT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.15",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
cpsat = "cpsat_scheduler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
